--- a/App.config
+++ b/App.config
@@ -13,6 +13,12 @@
             <setting name="Port" serializeAs="String">
                 <value>8080</value>
             </setting>
+            <setting name="ConfigFilePath" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="GocqhttpFilePath" serializeAs="String">
+                <value />
+            </setting>
         </gocqhttp_CSharp.AppSetting>
     </userSettings>
 </configuration>
