--- a/App.config
+++ b/App.config
@@ -19,6 +19,12 @@
             <setting name="GocqhttpFilePath" serializeAs="String">
                 <value />
             </setting>
+            <setting name="RobotID" serializeAs="String">
+                <value>0</value>
+            </setting>
+            <setting name="RobotName" serializeAs="String">
+                <value />
+            </setting>
         </gocqhttp_CSharp.AppSetting>
     </userSettings>
 </configuration>
