--- a/App.config
+++ b/App.config
@@ -23,6 +23,9 @@
                 <value>0</value>
             </setting>
             <setting name="RobotName" serializeAs="String">
+                <value>小机器人</value>
+            </setting>
+            <setting name="RobotPwd" serializeAs="String">
                 <value />
             </setting>
         </gocqhttp_CSharp.AppSetting>
