应技术不足开发的服务端版本，现暂停开发

--- a/App.config
+++ b/App.config
@@ -8,10 +8,10 @@
     <userSettings>
         <gocqhttp_CSharp.AppSetting>
             <setting name="IP" serializeAs="String">
-                <value>127.0.0.1</value>
+                <value>0.0.0.0</value>
             </setting>
             <setting name="Port" serializeAs="String">
-                <value>8080</value>
+                <value>3001</value>
             </setting>
             <setting name="ConfigFilePath" serializeAs="String">
                 <value />
@@ -20,13 +20,13 @@
                 <value />
             </setting>
             <setting name="RobotID" serializeAs="String">
-                <value>0</value>
+                <value>3406515483</value>
             </setting>
             <setting name="RobotName" serializeAs="String">
-                <value>小机器人</value>
+                <value>小爱衣</value>
             </setting>
             <setting name="RobotPwd" serializeAs="String">
-                <value />
+                <value>Xrz!535a00110110</value>
             </setting>
         </gocqhttp_CSharp.AppSetting>
     </userSettings>
