算是最终版本了，用还是能用的，但大概还有一些线程安全的小Bug，比如在多线程下我是用的是Dictionary，今天重新打开了这个项目，发现很多地方我自己看起来都费劲，但这也算是我从初三开始到大一的学习成果吧，过了一遍Copilot发现写得也没有那么差劲，也算是这么多年学习的一个完美逗号，现在我已经开始学习unity引擎了，之后打算从事游戏开发，但说实话自己的学习动力已经大不如从前了，希望未来的自己能坚持最初的理想吧。

--- a/App.config
+++ b/App.config
@@ -16,7 +16,7 @@
             <setting name="ConfigFilePath" serializeAs="String">
                 <value />
             </setting>
-            <setting name="GocqhttpFilePath" serializeAs="String">
+            <setting name="APIFilePath" serializeAs="String">
                 <value />
             </setting>
             <setting name="RobotID" serializeAs="String">
